--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <footer>
-        <a>proudly made by <a href="https://8xu.tech" target="_blank">8xu</a></a>
+        <a>proudly made by <a href="https://v0id.me" target="_blank">8xu</a></a>
     </footer>
 
 </body>
