Added some fine touches to the text animations/effects.
Links drop a trail animation, and the footer gained an outline shadow effect.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <main>
-        <h1>welcome, <span>dorskii</span> here.</h1>
+        <h1>welcome, <span>Dorskii</span> here.</h1>
     </main>
 
     <div class="container">
@@ -41,11 +41,15 @@
         </div>
         <div>
             <a href="https://www.youtube.com/channel/UCfVSWge6ncPkHrvEXhF3jlg" target="_blank">YouTube</a>
-        </div>    
+        </div>   
     </div>
 
+
+    
     <footer>
-        <a>proudly made by <a href="https://v0id.me" target="_blank">8xu</a></a>
+        <p>Credit to <a href="https://v0id.me" target="_blank">8xu</a> for helping me out.</p>
+        
+        <p>© 2023 Dorskii. All rights reserved.</p>
     </footer>
 
 </body>
