HTML Changes (Domain Photo)
Changed the H1 text with a photo + Has a lil spin :)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,9 +25,10 @@
     <meta property="twitter:description" content="dorskii's website, solemnly for dorskii.">
     <meta property="twitter:image" content="media/biglogo.png">
 </head>
+
 <body>
     <main>
-        <h1>welcome, <span>Dorskii</span> here.</h1>
+        <h1><img src="/media/domainphoto.png" alt="Domain Photo" style="width:320px;height:100px;"></h1>
     </main>
 
     <div class="container">
@@ -43,14 +45,11 @@
             <a href="https://www.youtube.com/channel/UCfVSWge6ncPkHrvEXhF3jlg" target="_blank">YouTube</a>
         </div>   
     </div>
-
-
     
     <footer>
         <p>Credit to <a href="https://v0id.me" target="_blank">8xu</a> for helping me out.</p>
         
         <p>© 2023 Dorskii. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
