--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
 
     <!-- Primary Meta Tags -->
-    <title>dorskii's  website</title>
-    <meta name="title" content="dorskii's  website">
+    <title>dorskii.me</title>
+    <meta name="title" content="dorskii.me">
     <meta name="description" content="dorskii's website, solemnly for dorskii.">
 
     <!-- Open Graph / Facebook -->
@@ -37,7 +37,11 @@
             <p>I'm 17 years old and I like to play games, GFX and Cooking.</p>
 
             <p>I also like to learn all about CSS, HTML and more!</p>
+
+            <p>Also, check out my referrals page!</p>
+            <br>
         </h3>
+        <a id="referrals" target="_blank">Referrals</a>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path d="M0,64L60,85.3C120,107,240,149,360,170.7C480,192,600,192,720,170.7C840,149,960,107,1080,80C1200,53,1320,43,1380,37.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
         </svg>
