--- a/referrals.html
+++ b/referrals.html
@@ -24,6 +24,7 @@
         font-family: 'Montserrat', sans-serif;
         display: flex;
         justify-content: center;
+        text-align: center;
         align-items: center;
         flex-direction: column;
         height: 100vh;
